sooy interview added

--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -78,13 +78,20 @@
           <h6 class="page-title">Millville City Commissioners</h6>
           <p>
             As of today, 9/8/2024, we have been able to establish contact with some of the candidates to gather some information, but we expect much more to come 
-            in soon, including potential interviews with the current mayor and vice mayor to help us understand current issues facing the city. As of now, our 
+            in soon, including one interview with the current vice-mayor about the current issues in Millville, and potentially a similar interview with the 
+            mayor soon to come. As of now, our 
             basic understanding is that Marissa Ranello's seat is open for election, with her running for re-election and three challengers. Robert Mcquade is 
             one challenger who has years of experience on the school board and about one year of experience on the commissioner's board, he has sent us some 
             prelimnary information about his campaign, and he plans to send us more information soon. Another challenger, Maria Darminio, is a popular 
             bartender at a local bar, OVT, and she plans to send us information soon. Carole Cossaboon has a bit of a presence on her facebook campaign group 
             and has recently given us information which you can see on her page. All in all, assuming everyone follows up on sending over information, you will 
             have an informed choice. Until then, stay tuned.
+
+            <div class="video-box-modal can-sec">
+                <h3 class="video-heading">NJ Spotlight News Interview</h3>
+                <iframe src="https://www.youtube.com/embed/H3bTIfkFfx4?si=vPXkSJIKsjQ5S-k8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+            </div>  
+
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
