--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
     <div class="hp-container">
         <h3 class="videos-heading">VIDEOS</h3>
     <div class="hp-video-box">
+
         <div class="video-box-sm">
             <iframe src="https://www.youtube.com/embed/RzMenmzY_-M?si=3CpJROnXAzE-MVPj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <h3 class="video-heading-sm"></h3>
@@ -204,6 +205,7 @@
                 Site Tutorial
             </div>
         </div>
+
         <div class="video-box-sm">
             <iframe class='video-container' src="https://www.youtube.com/embed/WSvZ7nOT8M0?si=hgd4Lr6PmIzKNoh9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
             <div class="video-sm-desc">
@@ -212,14 +214,12 @@
         </div>
         
         <div class="video-box-sm">
-
-            <!-- <iframe src="https://www.youtube.com/embed/dpBg37i9cx0?si=rcfj8cK8QyAxvn4J" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            -->
             <h3 class="video-heading-sm"></h3>
-            <div class="video-sm-desc">
-                
+                <iframe src="https://www.youtube.com/embed/H3bTIfkFfx4?si=vPXkSJIKsjQ5S-k8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="video-sm-desc">  
             </div>
         </div>
+
     </div>
 
 
