--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
             <h3 class="video-heading-sm"></h3>
                 <iframe src="https://www.youtube.com/embed/H3bTIfkFfx4?si=vPXkSJIKsjQ5S-k8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div class="video-sm-desc">  
+                Vice-Mayor of Millville Joe Sooy discusses the issues related to the commissioner's election
             </div>
         </div>
 
