--- a/child_pages/cc-elections/Candidates/silva.html
+++ b/child_pages/cc-elections/Candidates/silva.html
@@ -94,7 +94,7 @@
          </div>
      </div>
      <div class="candidate-pic-box">
-         <img class="cover" src="../../../assets/candidates/medio.jpg" class="candidate-pic">
+         <img class="cover" src="../../../assets/candidates/silva.webp" class="candidate-pic">
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
