--- a/child_pages/cc-elections/Candidates/spinelli.html
+++ b/child_pages/cc-elections/Candidates/spinelli.html
@@ -94,14 +94,14 @@
 <div class="container">
 
     <div class="title-info">
-        <h2>Marissa Ranello</h2>
+        <h2>Paul F. Spinelli</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
-             <div class="position">Millville City Commissioner</div>
+             <div class="position">Vineland City Council</div>
          </div>
          <div class="incum-or-challenger">
              <div class="incumbent active">Incumbent</div>
-             <div class="challenger active">Challenger</div> 
+             <div class="challenger inactive">Challenger</div> 
          </div>
      </div>
      <div class="candidate-pic-box">
