--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                                 <li class="link"><a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/vineland_city_council_2024.html">Vineland City Council</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/vineland_mayor_2024.html">Vineland Mayor</a></li>
-
                                 <li class="link"><a href="child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
@@ -162,6 +162,7 @@
                         <a href="child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a>
                         <a href="child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a>
                         <a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a>
+                        <a href="child_pages/cc-elections/vineland_city_council_2024.html">Vineland City Council</a>
                         <a href="child_pages/cc-elections/vineland_mayor_2024.html">Vineland Mayor</a>
                         <a href="child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a>
                         <a href="child_pages/cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a>
