corrections on arthur page

--- a/child_pages/cc-elections/Candidates/arthur.html
+++ b/child_pages/cc-elections/Candidates/arthur.html
@@ -91,7 +91,7 @@
 <div class="container">
 
     <div class="title-info">
-        <h2>Marissa Ranello</h2>
+        <h2>Elizabeth A. Arthur</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
              <div class="position">Vineland City Council</div>
@@ -102,7 +102,7 @@
          </div>
      </div>
      <div class="candidate-pic-box">
-         <img class="cover" src="../../../assets/candidates/arthur.png" class="candidate-pic">
+         <img class="cover" src="../../../assets/candidates/arthur.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
