--- a/child_pages/cc-elections/Candidates/gomez.html
+++ b/child_pages/cc-elections/Candidates/gomez.html
@@ -74,7 +74,7 @@
               <h6 class="page-title">Scott E. English</h6>
               <p>
                 
-                
+                We are waiting for candidate Gomez to provide us detailed information on Monday, 9/16/2024.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
               </p>
