spinelli pic corrected

--- a/child_pages/cc-elections/Candidates/spinelli.html
+++ b/child_pages/cc-elections/Candidates/spinelli.html
@@ -106,7 +106,7 @@
          </div>
      </div>
      <div class="candidate-pic-box">
-         <img class="cover" src="../../../assets/candidates/spinelli.png" class="candidate-pic">
+         <img class="cover" src="../../../assets/candidates/spinelli.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
