english page corrected

--- a/child_pages/cc-elections/Candidates/english.html
+++ b/child_pages/cc-elections/Candidates/english.html
@@ -102,12 +102,12 @@
              <div class="position">Vineland City Council</div>
          </div>
          <div class="incum-or-challenger">
-             <div class="incumbent active">Incumbent</div>
-             <div class="challenger inactive">Challenger</div> 
+             <div class="incumbent inactive">Incumbent</div>
+             <div class="challenger active">Challenger</div> 
          </div>
      </div>
      <div class="candidate-pic-box">
-         <img class="cover" src="../../../assets/candidates/english.png" class="candidate-pic">
+         <img class="cover" src="../../../assets/candidates/english.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
@@ -126,15 +126,15 @@
              </div>
 
              <div class="animal-box">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
