--- a/child_pages/cc-elections/Candidates/fanucci.html
+++ b/child_pages/cc-elections/Candidates/fanucci.html
@@ -185,7 +185,19 @@
                 We must continue to move forward, show leadership, work together, and position Vineland for even greater success in the years to come. 
                 We have worked too hard over the past seven plus years to earn our place as a growing community that businesses and families want to 
                 invest in.  I ask you to support Team Fanucci on November 5.
+
+                For example, under the Romano administration economic growth had become stagnant, businesses were not locating here or 
+                expanding.  This led to problems with the budget, public safety layoffs, forced furloughs for city employees, and 
+                neglect of our municipal infrastructure.  On top of that, he mismanaged a city-wide revaluation which ended up costing 
+                the city over $200 million in tax valuation after he left office, and all the appeals were completed.
                 
+                Under my administration, there is no doubt we now enjoy the strongest economic health the city has seen in decades.  
+                We have managed our debt, grown our tax base to a record $3.9 billion, and increased the city’s cash reserves from 
+                $1.9 million when I took office  to $14 million at present.  Much of this has been driven by the rapid growth of our 
+                commercial and industrial sectors, including $600 million in private sector investment to date with much more in the 
+                pipeline for this year.  This does not even consider future projects under discussion for the new year which could 
+                total approximately one billion more.   In fact, to keep up with the demand we are seeing, we are currently developing 
+                our third industrial park which is being financed in part by a $3 million U.S. Department of Commerce EDA grant.
             </div>
 
             
