extra accordions test 2

--- a/child_pages/contact.html
+++ b/child_pages/contact.html
@@ -39,8 +39,8 @@
                         </div>
 
                         <div class="accordion">
-                            <input type="checkbox" name="accordion" id="first">
-                            <label for="first">School Board Elections</label>
+                            <input type="checkbox" name="accordion" id="second">
+                            <label for="second">School Board Elections</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                 <li class="link"><a href="cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
@@ -51,8 +51,8 @@
                         </div>
 
                         <div class="accordion">
-                            <input type="checkbox" name="accordion" id="first">
-                            <label for="first">State and National Elections</label>
+                            <input type="checkbox" name="accordion" id="third">
+                            <label for="third">State and National Elections</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
                                 <li class="link"><a href="cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
@@ -62,8 +62,8 @@
                         </div>
 
                         <div class="accordion">
-                            <input type="checkbox" name="accordion" id="second">
-                            <label for="second">Issues</label>
+                            <input type="checkbox" name="accordion" id="fourth">
+                            <label for="fourth">Issues</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
                                 <li class="link"><a href="cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
