--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -25,31 +25,48 @@
             <div>
                 <div>
                     <ul class="links">
+
                         <li class="link"><a id="home" href="https://www.informthevotenj.com/index.html">Home</a></li>
+                        
                         <div class="accordion">
                             <input type="checkbox" name="accordion" id="first">
-                            <label for="first">Elections</label>
+                            <label for="first">County Elections</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
                                 <li class="link"><a href="cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
                                 <li class="link"><a href="cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
                                 <li class="link"><a href="cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
                                 <li class="link"><a href="cc-elections/vineland_city_council_2024.html">Vineland City Council</a></li>
-                                <li class="link"><a href="cc-elections/vineland_mayor_2024.html">Vineland Mayor</a></li>
+                                <li class="link"><a href="cc-elections/vineland_mayor_2024.html">Vineland Mayor</a></li>                                
+                            </div>
+                        </div>
+
+                        <div class="accordion">
+                            <input type="checkbox" name="accordion" id="second">
+                            <label for="second">School Board Elections</label>
+                            <div class="nested-burger-links">
                                 <li class="link"><a href="cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                 <li class="link"><a href="cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
                                 <li class="link"><a href="cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
                                 <li class="link"><a href="cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li>
                                 <li class="link"><a href="cc-elections/vsb_2024.html">Vineland School Board</a></li>
+                            </div>
+                        </div>
+
+                        <div class="accordion">
+                            <input type="checkbox" name="accordion" id="third">
+                            <label for="third">State and National Elections</label>
+                            <div class="nested-burger-links">
                                 <li class="link"><a href="cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
                                 <li class="link"><a href="cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
                                 <li class="link"><a href="cc-elections/cc_vice_president_2024.html">US Vice President</a></li>
                                 <li class="link"><a href="cc-elections/us_president_2024.html">US President</a></li>
                             </div>
                         </div>
+
                         <div class="accordion">
-                            <input type="checkbox" name="accordion" id="second">
-                            <label for="second">Issues</label>
+                            <input type="checkbox" name="accordion" id="fourth">
+                            <label for="fourth">Issues</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
                                 <li class="link"><a href="cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
@@ -61,6 +78,7 @@
                                 <li class="link"><a href="cc-elections/us_president_issues.html">President Issues</a></li>
                             </div>
                         </div>
+
                         <li class="link"><a href="get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="events.html">Events</a></li>
                         <li class="link"><a href="resources-archives-and-rabbit-holes.html">Extra Info</a></li>
