ranello formatting changes

--- a/child_pages/cc-elections/Candidates/ranello.html
+++ b/child_pages/cc-elections/Candidates/ranello.html
@@ -217,7 +217,8 @@
                         support projects that could result in significant pollution or potentially harm the environment and public health. Balancing 
                         economic development with environmental and social responsibility is really important to me.
                     </li>
-
+                    <br>
+                    <br>
                     <li>
                         Cannabis as a potential source of tax revenue -
                         <br>
@@ -225,14 +226,15 @@
                         As we know, New Jersey legalized recreational marijuana through a voter-approved referendum in 2020. My primary concern with the 
                         legal cannabis market is that it has resulted in cannabis becoming more accessible to minors. Last year, the American Academy of 
                         Pediatrics released a report on edible cannabis exposures and acute toxicity in children under 6. The data revealed a dramatic 
-                        increase in cases: from 207 in 2017 to 3,054 in 2021—an alarming rise of 1,375%. While the aim of regulating cannabis was to 
-                        ensure quality control and safety, these numbers make me wonder if we’re improving safety for adults but failing to protect 
-                        children. Given these concerns, I’m uncertain if I’ll ever be completely at ease with the widespread acceptance of cannabis. 
+                        increase in cases: from 207 in 2017 to 3,054 in 2021-an alarming rise of 1,375%. While the aim of regulating cannabis was to 
+                        ensure quality control and safety, these numbers make me wonder if we're improving safety for adults but failing to protect 
+                        children. Given these concerns, I'm uncertain if I'll ever be completely at ease with the widespread acceptance of cannabis. 
                         Nevertheless, it is now legal throughout the state, and it generates revenue and creates jobs. Currently, we do not allow 
                         dispensaries in Millville, although we have one growing facility. Regardless of individual opinions on marijuana, it is already 
                         present in our community. The reality is that cannabis provides a source of revenue, and we collect a 2% tax on it. 
                     </li>
-
+                    <br>
+                    <br>
                     <li>
                         Nabb Ave Extension -
                         <br>
@@ -241,7 +243,8 @@
                         drive new development, bringing significant advantages to Millville and the surrounding area. We've had a lot of different 
                         studies at this point. I'm hopeful that the city and the county can work together to bring this project to fruition. 
                     </li>
-
+                    <br>
+                    <br>
                     <li>
                         Voter Awareness and Civic Engagement -
                         <br>
@@ -250,10 +253,11 @@
                         numerous problems, and communicating with both the public and various departments. If a candidate cannot dedicate the necessary 
                         time and effort, they should reconsider running for office. My advice to voters is to ask candidates about their platforms and 
                         the issues they plan to address. Find out what problems they aim to tackle, how they plan to address them, and what their 
-                        specific strategies are. If a candidate can't provide clear answers, that’s a red flag. This isn’t about popularity; it's about 
+                        specific strategies are. If a candidate can't provide clear answers, that's a red flag. This isn't about popularity; it's about 
                         choosing dedicated individuals who are genuinely committed to improving our city.  
                     </li>
-
+                    <br>
+                    <br>
                     <li>
                         Road safety and off-road vehicles -
                         <br>
@@ -264,7 +268,8 @@
                         However, my primary concern is for Millville. Our police department urgently needs clear guidelines and support from the 
                         Attorney General. 
                     </li>
-
+                    <br>
+                    <br>
                     <li>
                         Community - 
                         <br>
@@ -273,7 +278,8 @@
                         we're fragmented and disconnected. My goal is to create a safer, more welcoming environment that encourages everyone to come 
                         together to celebrate our strengths and address the issues we face. 
                     </li>
-
+                    <br>
+                    <br>
                     <li>
                         Situational Crime Prevention - 
                         <br>
@@ -301,7 +307,7 @@
                 <br>
                 <br>
 
-                      Marissa Ranello holds a Bachelor’s degree in Law and Justice from Rowan University. From January 2021 to January 2024, she served 
+                      Marissa Ranello holds a Bachelor's degree in Law and Justice from Rowan University. From January 2021 to January 2024, she served 
                       on the Millville Board of Education, where she was the chairperson for Board Governance and Policy. Her educational and 
                       professional experiences have equipped her with vital skills in policy development, governance, advocacy, conflict resolution, 
                       and ethical leadership. These skills enable her to serve the community effectively, make informed decisions, and tackle challenges 
