--- a/child_pages/cc-elections/Candidates/ranello.html
+++ b/child_pages/cc-elections/Candidates/ranello.html
@@ -92,7 +92,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
               <h4 class="quick-sum">quick summary</h4>
-              <h6 class="page-title">Carole E. Cossaboon</h6>
+              <h6 class="page-title">Marissa Ranello</h6>
               <p>
                 Ms. Ranello is a current Millville City Commissioner and is running for re-election. She has a degree in law and justice, and she was also a Millville School 
                 board member for four years. She has been communicative with us in regards to addressing the issues put forward by Vice-Mayor Sooy in our 
@@ -100,7 +100,13 @@
                 <a href="https://www.informthevotenj.com/child_pages/cc-elections/millville_city_issues">Millville City Issues page</a>. Some of the stances she takes is 
                 supporting the Nabb Ave Extension to help bring economic development to the city, addressing road safety and off-road vehicles by engaging the New Jersey Attorney 
                 General, and addressing the current crime situation in the city by creating a stronger sense of community in the city which would make crime less appealing. We 
-                suggest you scroll down and read her responses directly.
+                suggest you scroll down and read her responses directly. 
+                <br>
+                <br>
+                Additionally, after speaking with candidate Ranello on the phone, she informed us that the specific seat that is open on the board is the 
+                seat in charge of the Parks and Public Property Department, which has its own specific set of issues. Some of these issues were made clear 
+                in a recent <a href="https://www.facebook.com/groups/1657190991204047/permalink/25141844292312053/?mibextid=xfxF2i&rdid=IIMt9F0NmPiPrBwo&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fp%2FsxM3r9pZQZGLK3x5%2F%3Fmibextid%3DxfxF2i">facebook post</a>, which include 
+                keeping public spaces orderly and cleaning up parks and public areas to make them inviting.
                 <br>
                 <br>
                 After some quick google searches and a quick scour of her political facebook,
@@ -143,7 +149,7 @@
          </div>
          <div class="incum-or-challenger">
              <div class="incumbent active">Incumbent</div>
-             <div class="challenger active">Challenger</div> 
+             <div class="challenger inactive">Challenger</div> 
          </div>
      </div>
      <div class="candidate-pic-box">
@@ -166,15 +172,15 @@
              </div>
 
              <div class="animal-box">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
@@ -217,6 +223,7 @@
                         support projects that could result in significant pollution or potentially harm the environment and public health. Balancing 
                         economic development with environmental and social responsibility is really important to me.
                     </li>
+                    <li></li>
                     <br>
                     <br>
                     <li>
@@ -235,6 +242,7 @@
                     </li>
                     <br>
                     <br>
+                    <li></li>
                     <li>
                         Nabb Ave Extension -
                         <br>
@@ -258,6 +266,7 @@
                     </li>
                     <br>
                     <br>
+                    <li></li>
                     <li>
                         Road safety and off-road vehicles -
                         <br>
@@ -280,6 +289,7 @@
                     </li>
                     <br>
                     <br>
+                    <li></li>
                     <li>
                         Situational Crime Prevention - 
                         <br>
