ascii cleanup gomez page

--- a/child_pages/cc-elections/Candidates/gomez.html
+++ b/child_pages/cc-elections/Candidates/gomez.html
@@ -208,7 +208,7 @@
                 <br>
                 <br>
                 Cruz is president of two Non-Profits, Kingdom Empowering Entrepreneur Network and Kingdom Covenant Ministry. Along with his wife, they have 
-                devoted their life to their faith and to families in need. He is also the author of two books “The Mirage” and “Dreamer Awaken.”
+                devoted their life to their faith and to families in need. He is also the author of two books "The Mirage" and "Dreamer Awaken."
                 Cruz currently serves on the Hispanic Advisory Board of RCSJ Cumberland Campus and is an Ordained Minister.       
             </div>
             
