middle mile issue updated

--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -111,12 +111,12 @@
                         One candidate said "With the lack of press coverage, candidates are left to be their own press on social media." 
                         While we appreciate the pro-active approach to do something to get information out to the public, this approach could easily lead 
                         to the appearance of overwhelming bias and scattered sources of information... who has the time to
-                        scour all the candidates social media pages, verify the facts, send follow-up questions that oftentimes go unanswered, attend various events that
-                        have entrance fees, etc etc etc? The press, that's who. Another candidate said "If I get involved in forming the 
-                        local press, it could be viewed as a bias for my party." Understandable, but we are still ultimately left uninformed. The public needs reasonable
-                        access to comprehensive, consolidated information regarding election choices. "We'll let the public know what we want 
-                        them to know", this did not come from a candidate, but rather from a campaign organizer. It's pretty clear that we have a 
-                        problem, but not necessarily anyone willing to solve it.
+                        scour all the candidates social media pages, verify the facts, send follow-up questions that oftentimes go unanswered, attend 
+                        various events that have entrance fees, etc etc etc? The press, that's who. Another candidate said "If I get involved in forming 
+                        the  local press, it could be viewed as a bias for my party." Understandable, but we are still ultimately left uninformed. The 
+                        public needs reasonable access to comprehensive, consolidated information regarding election choices. "We'll let the public know 
+                        what we want them to know", this did not come from a candidate, but rather from a campaign organizer. It's pretty clear that we 
+                        have a problem, but not necessarily anyone willing to solve it.
                     </div>
                 </div>
                 <div class="issues-card">
@@ -167,16 +167,23 @@
                         As part of the Inflation Reduction Act, Senator Van Drew applied for
                         Cumberland County to receive a federal grant to upgrade our broadband infrastructure.
                         The full grant was approximately $35 million, where Cumberland County would need to
-                        spend about $5 million of its own money to qualify for the grant. The controversy over moving forward on this
-                        project was that the ‘middle mile’ grant only extends dark fiber around the general area
+                        spend about $5 million of its own money to qualify for the grant. Part of the controversy arose during public hearings about the 
+                        project, where the 'true cost', meaning additional costs during years of implementation as opposed to the initial proposed cost, 
+                        could add tens of millions, let alone maintenance costs after implementation.... so who would pay for that? Another part of the 
+                        controversy over moving forward on this project was that the ‘middle mile’ grant only extends dark fiber around the general area
                         of the county but does not guarantee that any homes will actually be hooked up in the
-                        future. That part would rely on internet companies such as Comcast and Verizon, or
-                        individual residents, to finish the connection. There was also no feasibility study
-                        finished. There was much passionate debate at county meetings on whether to move
+                        future. That part would rely on internet companies such as Comcast and Verizon, individual residents, or 'end mile' grants to directly 
+                        connect customers to existing infrastructure. With 'end mile' options available, some people feel that direct connections are a 
+                        better method rather than a county-wide solution that is oftentimes redundant, meaning many areas around the county already have 
+                        sufficient access to broadband. There was also no feasibility study finished, which implies the cost of the project could be 
+                        significantly off. There was much passionate debate at county meetings on whether to move
                         forward or not, and finally the county commission voted in favor of moving forward.
-                        Since the vote, Director Commissioner Albrecht informed me that the county is already
-                        in talks to receive ‘end mile’ money, which would help individual customers to connect
-                        their specific homes.
+                        Shortly after the vote, Director Commissioner Albrecht informed us that the county is already
+                        in talks to receive the ‘end mile’ money, which could work in tandem with middle mile money we already received. The bulk of these 
+                        discussions happened about a year ago in 2023, so perhaps it is time the public receives a progress report from the county so they 
+                        can get a clear picture of how the project is going and how their tax dollars are being spent. This would be consistent with 
+                        Commissioner Lod's statement during the vote (paraphrased), "We understand that the project is a risk, as many projects are. We can 
+                        try going in this direction and if it doesn't pan out the way we're hoping, we can try something else."
                     </div>
                 </div>
                 <div class="issues-card">
