get involved page updated

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -116,20 +116,9 @@
                             as they are related to local elections, and why not have as much info on one consolidated website? Also, be sure to pro-actively 
                             follow the candidates on social media to stay up to date. And by pro-actively I mean set aside time once every few weeks to check
                             their pages, because simply clicking the follow buttons may lead to posts getting lost in the clutter, or
-                            even missing shadow-banned posts.
-                            <br>
-                            <br>
-                            <center><a href="cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioner Election</a></center> 
-                            <br>
-                            <center><a href="cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk Election</a></center> 
-                            <br>
-                            <center><a href="cc-elections/us_house_of_representatives_2024.html">US House of Representatives Election</a></center> 
-                            <br>
-                            <center><a href="cc-elections/us_senate_2024.html">US Senate Election</a></center> 
-                            <br>
-                            <center><a href="cc-elections/cc_vice_president_2024.html">US Vice President Nominees Information</a></center> 
-                            <br>
-                            <center><a href="cc-elections/us_president_2024.html">US President Election</a></center> 
+                            even missing shadow-banned posts. Use the hamburger menu in the top left of the screen to navigate to the candidate 
+                            pages.
+                            
                         </li>
 
                         <br>
@@ -139,20 +128,33 @@
                             <strong>Internalize the Popular Issues:</strong> Before you can assess a candidate's suitability, you need 
                             to know where you stand on the key issues. Our Issues page offers a comprehensive overview of ongoing and 
                             popular issues at the county and state level. This will help you prepare questions for the candidates and 
-                            understand what matters most to you. 
+                            understand what matters most to you. Use the hamburger menu in the top left of the screen to navigate to the issue 
+                            pages. 
+                        </li>
+
+                        <br>
+                        <br>
+
+                        <li class="gl-li">
+                            <strong>Facebook Groups:</strong> Over the course of the past year, we have learned about several facebook groups where 
+                            you can read and post about local politics. To note, while this is a somewhat convenient way to stay connected, with so 
+                            many different social media outlets it can be very easy for relevant information to get buried in the mix or shadow-banned... 
+                            especially if you don't stay pro-active to check them yourself as opposed to relying on big-tech algorithms and policies.
                             <br>
                             <br>
-                            <center><a href="/child_pages/cc-elections/cc_election_issues.html">County and State Issues</a></center>
+                            <a href="https://www.facebook.com/groups/603531057334230">Concerned Citizens of Cumberland County NJ</a>
                             <br>
-                            <center><a href="/child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></center>
                             <br>
-                            <center><a href="/child_pages/cc-elections/us_house_of_reps_issues.html">US House of Representatives Issues</a></center>
+                            <a href="https://www.facebook.com/CumberlandNJGOP">Cumberland GOP</a>
                             <br>
-                            <center><a href="/child_pages/cc-elections/us_senate_issues.html">US Senate Issues</a></center>
                             <br>
-                            <center><a href="/child_pages/cc-elections/us_vice_president_issues.html">US Vice President Issues</a></center>
+                            <a href="https://www.facebook.com/groups/442220931182672">Cumberland County NJ Democrats</a>
                             <br>
-                            <center><a href="/child_pages/cc-elections/us_president_issues.html">US President Issues</a></center>  
+                            <br>
+                            <a href="https://www.facebook.com/groups/1657190991204047">Millville N.J. - The good, the bad, and the ugly.</a>
+                            <br>
+                            <br>
+                            <a href="https://www.facebook.com/groups/781111154116727">Inform the Vote NJ</a>
                         </li>
 
                         <br>
