slogan test millville ballot

--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -218,6 +218,11 @@
                                 <a href="Candidates/cossaboon.html">Cossaboon</a>
                             </div>
                         </div>
+                        <div class="a-row-3">
+                            <div class="slogan">
+                                <p>Working Together As A Community</p>
+                            </div>
+                        </div>
     
                     </div>
                     <!-- <div class="b"></div> -->
