more millville ballot testing

--- a/child_pages/cc-elections/official_ballots_2024.html
+++ b/child_pages/cc-elections/official_ballots_2024.html
@@ -118,7 +118,7 @@
           <details>
                     <summary style="cursor:pointer; color:blue; text-decoration:underline;">General Election Ballot</summary>                          
                     <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
-                    <img src="../../../assets/screenshots/mcQuade/spOfficerCert2.jpg" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                    <img src="../../../assets/screenshots/ballots/generalBallot.png" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
                 </details>
     
 </body>
