official ballot disclaimer on millville ballot page

--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -125,6 +125,9 @@
 
     <div id="sample-ballot">
 
+    <h1>Below is only an interactive ballot designed to help voters using this website to organize their choices based on specific positions. Please visit 
+    our <a href="../cc-elections/official_ballots_2024.html">Official Ballots Page</a> to become familiar with what you will see in the voting booth.</h1>
+
         <h4 class="sub-heading-ballot">What does a commissioner do?</h4>
         <div class="job-description can-sec">
 
