--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                     <ul class="links">
 
                         <li class="link"><a id="home" href="https://www.informthevotenj.com/index.html">Home</a></li>
+                        <li class="link"><a id="home" href="child_pages/cc-elections/official_ballots_2024.html">Official Ballots</a></li>
+
                         
                         <div class="accordion">
                             <input type="checkbox" name="accordion" id="first">
