--- a/child_pages/cc-elections/us_president_2024.html
+++ b/child_pages/cc-elections/us_president_2024.html
@@ -172,6 +172,14 @@
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 5th, 2024</h3>
             <h2>SAMPLE BALLOT</h2>
+            <h3>Below is only an interactive ballot designed to help voters using this website to organize their choices based on specific positions. Please visit 
+                our <a href="../cc-elections/official_ballots_2024.html">Official Ballots Page</a> or click the foldout below to become familiar with what you 
+                will see in the voting booth.</h3>
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">General Election Ballot</summary>                          
+                <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
+                <img src="../../../assets/screenshots/ballots/generalBallot.png" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+            </details>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
             <h3>US PRESIDENT</h3>
             <h4>DEMOCRATIC</h4>
